# pysnspd

./: .gitignore  LICENSE  README.md  pipeline03_cpu_diag_20260705_034844.txt  pyproject.toml  status.md
configs/: example_project.yaml  geminga_local.yaml  geminga_local_v2.yaml  geminga_local_v3.yaml  geminga_local_v3_E1_dense.yaml  geminga_smoke_nowarn.yaml
docs/: ARCHITECTURE_POLICY.md  IMPLEMENTATION_PLAN.md
pipelines/: 00_configure_project.py  01_prerun_pytdgl_like_template.py  01_prerun_template.py  02_oe5_power_debug.py  02_oe6_ss_seed.py  02_ss_run_template.py  03_mesh_quality_audit.py  03_photon_run_template.py  04_fv_geometry_audit.py  04_plot_run_template.py  05_ss_pytdgl_like_template.py
plot_pipelines/: 01_plot_prerun.py  01_plot_ss_run.py  02_plot_ss_run.py  03_plot_photon_run.py  E1_plot_prerun.py  E2_phasecg_ss_diagnostics.py  E3_photon_position_comparison.py  Z1_current_sweep_analysis.py  Z2_current_sweep_analysis.py
pysnspd/: __init__.py  config.py
tests/: conftest.py  test_circuit_runtime.py  test_config_io.py  test_config_material_times.py  test_current_reconstruction.py  test_eliashberg_powers.py  test_gtdgl_adapter_stationary.py  test_gtdgl_adaptive_diagnostics.py  test_gtdgl_allmaras_appendix_b.py  test_gtdgl_allmaras_update.py  test_gtdgl_boundary_policies.py  test_gtdgl_currents.py  test_gtdgl_device.py  test_gtdgl_exact_finite_volume.py  test_gtdgl_finite_volume_mesh.py  test_gtdgl_flat_imports.py  test_gtdgl_material_diffusion_factor.py  test_gtdgl_oe7.py  test_gtdgl_operators.py  test_gtdgl_phi_phase_policy.py  test_gtdgl_ss_targets.py  (+44 more)
(+149 files in other folders)
