[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pysnspd"
version = "0.0.0"
description = "Template repository for a modular multiscale SNSPD simulation framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Joaquin Andres Diaz Monge"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["pysnspd*"]
